--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.1.0",
+    "@sanity/client": "^6.22.4",
+    "@sanity/icons": "^3.4.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "3",
+    "next": "15.0.3",
+    "next-sanity": "^9.8.10",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "sanity": "3",
+    "styled-components": "6"
   },
   "devDependencies": {
     "typescript": "^5",
