--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 # Para desplegar Sanity
 SANITY_STUDIO_PROJECT_ID=
 SANITY_STUDIO_DATASET=production
+
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_
+CLERK_SECRET_KEY=sk_test_
