--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.3.1",
     "@portabletext/react": "^3.1.0",
     "@sanity/client": "^6.22.4",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "3",
+    "@sanity/vision": "^3.64.0",
     "next": "15.0.3",
-    "next-sanity": "^9.8.10",
+    "next-sanity": "^9.8.12",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "sanity": "3",
-    "styled-components": "6"
+    "sanity": "^3.64.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
+    "typescript": "^5.6.3",
+    "@types/node": "^20.17.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3"
   }
 }
