--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-	"name": "sonny-ecommerce",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"typegen": "bun x sanity@latest schema extract && bun x sanity@latest typegen generate"
-	},
-	"dependencies": {
-		"@clerk/nextjs": "^6.3.1",
-		"@portabletext/react": "^3.1.0",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@sanity/client": "^6.22.4",
-		"@sanity/icons": "^3.4.0",
-		"@sanity/image-url": "^1.1.0",
-		"@sanity/vision": "^3.64.0",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
-		"lucide-react": "^0.456.0",
-		"next": "15.0.3",
-		"next-sanity": "^9.8.12",
-		"react": "19.0.0-rc-66855b96-20241106",
-		"react-dom": "19.0.0-rc-66855b96-20241106",
-		"sanity": "^3.64.0",
-		"styled-components": "^6.1.13",
-		"tailwind-merge": "^2.5.4",
-		"tailwindcss-animate": "^1.0.7"
-	},
-	"devDependencies": {
-		"typescript": "^5.6.3",
-		"@types/node": "^20.17.6",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
-		"postcss": "^8.4.49",
-		"tailwindcss": "^3.4.14",
-		"eslint": "^8.57.1",
-		"eslint-config-next": "15.0.3"
-	}
+  "name": "sonny-ecommerce",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "dev:sanity": "typegen && next dev --turbopack",
+    "typegen": "bun x sanity@latest schema extract && bun x sanity@latest typegen generate"
+  },
+  "dependencies": {
+    "@clerk/nextjs": "^6.3.1",
+    "@portabletext/react": "^3.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@sanity/client": "^6.22.4",
+    "@sanity/icons": "^3.4.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.64.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "12.0.0-alpha.1",
+    "lucide-react": "^0.456.0",
+    "next": "15.0.3",
+    "next-sanity": "^9.8.12",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "sanity": "^3.64.0",
+    "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3",
+    "@types/node": "^20.17.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.0.3"
+  }
 }
