--- a/package.json
+++ b/package.json
@@ -7,37 +7,37 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "dev:sanity": "typegen && next dev --turbopack",
+    "dev:sanity": " bun run typegen && next dev --turbopack",
     "typegen": "bun x sanity@latest schema extract && bun x sanity@latest typegen generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.3.1",
+    "@clerk/nextjs": "^6.5.0",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@sanity/client": "^6.22.4",
+    "@sanity/client": "^6.22.5",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.64.0",
+    "@sanity/vision": "^3.64.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "12.0.0-alpha.1",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
-    "next-sanity": "^9.8.12",
+    "next-sanity": "^9.8.16",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "sanity": "^3.64.0",
+    "sanity": "^3.64.3",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
-    "@types/node": "^20.17.6",
+    "typescript": "^5.7.2",
+    "@types/node": "^20.17.7",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.15",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3"
   }
