--- a/package.json
+++ b/package.json
@@ -11,34 +11,35 @@
     "typegen": "bun x sanity@latest schema extract && bun x sanity@latest typegen generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.5.0",
+    "@clerk/nextjs": "^6.5.1",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@sanity/client": "^6.22.5",
-    "@sanity/icons": "^3.4.0",
+    "@sanity/icons": "^3.5.0",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.64.3",
-    "class-variance-authority": "^0.7.0",
+    "@sanity/vision": "^3.65.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "12.0.0-alpha.1",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
-    "next-sanity": "^9.8.16",
+    "next-sanity": "^9.8.19",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "sanity": "^3.64.3",
+    "sanity": "^3.65.1",
     "styled-components": "^6.1.13",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5.7.2",
-    "@types/node": "^20.17.7",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^20.17.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5.7.2"
   }
 }
