--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.5.1",
     "@portabletext/react": "^3.1.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@sanity/client": "^6.22.5",
     "@sanity/icons": "^3.5.0",
@@ -20,6 +22,7 @@
     "@sanity/vision": "^3.65.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "framer-motion": "12.0.0-alpha.1",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
