feat: new config linter and formater

--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "next start",
     "lint": "next lint",
     "dev:sanity": " bun run typegen && next dev --turbopack",
-    "typegen": "bun x sanity@latest schema extract && bun x sanity@latest typegen generate"
+    "typegen": "bun x sanity@latest schema extract && bun x sanity@latest typegen generate",
+    "prepare": "husky",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@clerk/nextjs": "^6.5.1",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-popover": "^1.1.2",
@@ -23,10 +27,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "framer-motion": "12.0.0-alpha.1",
+    "husky": "^9.1.7",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-sanity": "^9.8.19",
+    "prettier": "^3.4.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "sanity": "^3.65.1",
