--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,11 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "es5"
+  "prettier/prettier": [
+    "error",
+    {
+      "trailingComma": "none"
+    },
+    {
+      "usePrettierrc": false
+    }
+  ]
 }
