--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "sonny-ecommerce",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,46 +14,53 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.5.1",
+    "@clerk/nextjs": "^6.9.2",
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
-    "@portabletext/react": "^3.1.0",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@sanity/client": "^6.22.5",
-    "@sanity/icons": "^3.5.0",
+    "@portabletext/react": "^3.2.0",
+    "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-popover": "^1.1.3",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@sanity/client": "^6.24.1",
+    "@sanity/icons": "^3.5.2",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.65.1",
+    "@sanity/vision": "^3.67.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "commitlint": "^19.6.0",
+    "eslint": "9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "framer-motion": "12.0.0-alpha.1",
     "husky": "^9.1.7",
-    "lucide-react": "^0.456.0",
-    "next": "15.0.3",
-    "next-sanity": "^9.8.19",
+    "install": "^0.13.0",
+    "lucide-react": "^0.468.0",
+    "next": "15.1.0",
+    "next-sanity": "^9.8.27",
     "prettier": "^3.4.2",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "sanity": "^3.65.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "sanity": "^3.67.1",
+    "server-only": "^0.0.1",
     "stripe": "^17.4.0",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^20.17.9",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.3",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "eslint-config-next": "15.1.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
+  },
+  "prettier": {
+    "endOfLine": "lf"
   }
 }
