--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev ",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,22 +14,24 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.9.2",
-    "@commitlint/cli": "^19.6.0",
+    "@clerk/nextjs": "^6.9.6",
+    "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@portabletext/react": "^3.2.0",
-    "@radix-ui/react-dialog": "^1.1.3",
-    "@radix-ui/react-popover": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@sanity/client": "^6.24.1",
-    "@sanity/icons": "^3.5.2",
+    "@sanity/icons": "^3.5.6",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.67.1",
+    "@sanity/vision": "^3.68.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "commitlint": "^19.6.0",
+    "commitlint": "^19.6.1",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "eslint": "9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -38,13 +40,13 @@
     "install": "^0.13.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
-    "next-sanity": "^9.8.27",
+    "next-sanity": "^9.8.30",
     "prettier": "^3.4.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "sanity": "^3.67.1",
+    "sanity": "^3.68.3",
     "server-only": "^0.0.1",
-    "stripe": "^17.4.0",
+    "stripe": "^17.5.0",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -53,11 +55,11 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.10.2",
-    "@types/react": "^19.0.1",
+    "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "eslint-config-next": "15.1.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   },
   "prettier": {
