--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@portabletext/react": "^3.2.0",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@sanity/client": "^6.24.1",
     "@sanity/icons": "^3.5.6",
     "@sanity/image-url": "^1.1.0",
